minor error corrections

--- a/01_NLP/01_NLP_whit_NLTK.ipynb
+++ b/01_NLP/01_NLP_whit_NLTK.ipynb
@@ -17,13 +17,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.2.5'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "nltk.__version__\n"
    ]
   },
   {
@@ -96,7 +107,6 @@
    ],
    "source": [
     "# Download resources of NLTK data\n",
-    "\n",
     "nltk.download('punkt') # Punkt Tokenizer Models\n",
     "\n",
     "# List of available resources here: http://www.nltk.org/nltk_data/ "
@@ -501,17 +511,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/jorge/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "['Dive', 'into', 'NLTK', ':', 'Part-of-speech', 'tagging', 'and', 'POS', 'Tagger']\n",
       "[('Dive', 'NNP'), ('into', 'IN'), ('NLTK', 'NNP'), (':', ':'), ('Part-of-speech', 'JJ'), ('tagging', 'NN'), ('and', 'CC'), ('POS', 'NNP'), ('Tagger', 'NNP')]\n"
      ]
     }
    ],
    "source": [
     "# Download the POS model\n",
-    "#nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
     "# The POS model must be applied over word tokenized text\n",
     "text = nltk.word_tokenize(\"Dive into NLTK: Part-of-speech tagging and POS Tagger\")\n",
-    "\n",
+    "print(text)\n",
     "# Use the recommended part of speech tagger\n",
     "print(nltk.pos_tag(text))"
    ]
@@ -737,15 +752,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -772,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +797,7 @@
        " ('users', 'NNS')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +832,7 @@
        " ('York', 'LOCATION')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +842,7 @@
     "\n",
     "english_nertagger = CoreNLPNERTagger()\n",
     "\n",
-    "english_nertagger.tag(word_tok.tokenize('Rami Eid is studying at Stony Brook University in New York'))\n"
+    "english_nertagger.tag(word_tokenize('Rami Eid is studying at Stony Brook University in New York'))\n"
    ]
   },
   {
@@ -853,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -962,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
