--- a/02_text_classification_sklearn/03_sklearn_text_classification.ipynb
+++ b/02_text_classification_sklearn/03_sklearn_text_classification.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -26,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
@@ -44,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Sample data\n",
@@ -63,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Text preprocessing, tokenizing and filtering of stopwords\n",
@@ -81,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Visualize the results, first row and first column\n",
@@ -99,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#From occurrences to frequencies\n",
@@ -118,6 +130,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -137,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -156,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Score test data\n",
@@ -187,225 +204,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### TASK 4: Build a pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Define the pipeline\n",
-    "\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "text_clf = Pipeline(...)\n",
-    "\n",
-    "# Fit all the pipeline\n",
-    "text_clf.fit(twenty_train.data, twenty_train.target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Evaluate test data\n",
-    "twenty_test = fetch_20newsgroups(subset='test',\n",
-    "                    remove=('headers', 'footers', 'quotes'),\n",
-    "                    categories=categories, \n",
-    "                    shuffle=True, random_state=42)\n",
-    "\n",
-    "predicted = text_clf.predict(twenty_test.data)\n",
-    "\n",
-    "np.mean(predicted == twenty_test.target) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Change classifier in the pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
-    "text_clf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
-    "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', SGDClassifier(loss='hinge', penalty='l2',\n",
-    "                                           alpha=1e-3, n_iter=5, random_state=42)),\n",
-    "                    ])\n",
-    "#Fit\n",
-    "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
-    "\n",
-    "# Predict\n",
-    "predicted = text_clf.predict(twenty_test.data)\n",
-    "\n",
-    "# Evaluate accuracy\n",
-    "np.mean(predicted == twenty_test.target)            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import svm\n",
-    "text_clf_svm = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
-    "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', svm.LinearSVC()),\n",
-    "                    ])\n",
-    "\n",
-    "_ = text_clf_svm.fit(twenty_train.data, twenty_train.target)\n",
-    "\n",
-    "predicted = text_clf_svm.predict(twenty_test.data)\n",
-    "np.mean(predicted == twenty_test.target)            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Task5: Optimize a pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
-    "# Define estimator. No parameters of the search\n",
-    "clf = Pipeline([('vect', ...),\n",
-    "                ('tfidf', ...),\n",
-    "                ('clf', ...),\n",
-    "                ])\n",
-    "\n",
-    "# Specify parameters and distributions to sample from\n",
-    "# Parameters of pipelines can be set using ‘__’ separated parameter names:\n",
-    "param_dist = {\"vect__max_features\": ..., \n",
-    "              \"vect__stop_words\": ..., \n",
-    "              \"clf__C\": ...}\n",
-    "\n",
-    "# Define randomized search\n",
-    "n_iter_search = 10\n",
-    "random_search = RandomizedSearchCV(...)\n",
-    "\n",
-    "# Run the randomized search\n",
-    "random_search.fit(twenty_train.data, twenty_train.target)\n",
-    "\n",
-    "print(\"Done!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load dictionary of search results to a Pandas dataframe\n",
-    "import pandas as pd\n",
-    "\n",
-    "df_cv_results = pd.DataFrame.from_dict(random_search.cv_results_)\n",
-    "df_cv_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Score & evaluate test data using the best estimator\n",
-    "\n",
-    "text_clf_svm = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=10000, stop_words='english')),\n",
-    "                     ('tfidf', TfidfTransformer()),\n",
-    "                     ('clf', svm.LinearSVC(C=1.5)),\n",
-    "                    ])\n",
-    "\n",
-    "_ = text_clf_svm.fit(twenty_train.data, twenty_train.target)\n",
-    "\n",
-    "predicted = text_clf_svm.predict(twenty_test.data)\n",
-    "np.mean(predicted == twenty_test.target)            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aditional metrics for multiclass classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "\n",
-    "print(metrics.classification_report(twenty_test.target, \n",
-    "                                    predicted,\n",
-    "                                    target_names=twenty_test.target_names))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics.confusion_matrix(twenty_test.target, predicted)"
+    "# Score 2 new docs.\n",
+    "# Define a function score\n",
+    "docs_new = ['God is love', 'OpenGL on the GPU is fast']\n",
+    "...\n"
    ]
   }
  ],
