--- a/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
+++ b/02_text_classification_sklearn/03_sklearn_text_classification_SOLVED.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn version: 0.18.1\n"
+      "Sklearn version: 0.19.0\n"
      ]
     }
    ],
@@ -33,23 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No handlers could be found for logger \"sklearn.datasets.twenty_newsgroups\"\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['alt.atheism', 'comp.graphics', 'sci.med', 'soc.religion.christian']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,22 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Does anyone know of a good way (standard PC application/PD utility) to\n",
-      "convert tif/img/tga files into LaserJet III format.  We would also like to\n",
-      "do the same, converting to HPGL (HP plotter) files.\n",
+      "Hi,\n",
       "\n",
-      "Please email any response.\n",
+      "\tI have a problem, I hope some of the 'gurus' can help me solve.\n",
       "\n",
-      "Is this the correct group?\n",
+      "\tBackground of the problem:\n",
+      "\tI have a rectangular mesh in the uv domain, i.e  the mesh is a \n",
+      "\tmapping of a 3d Bezier patch into 2d. The area in this domain\n",
+      "\twhich is inside a trimming loop had to be rendered. The trimming\n",
+      "\tloop is a set of 2d Bezier curve segments.\n",
+      "\tFor the sake of notation: the mesh is made up of cells.\n",
       "\n",
-      "Thanks in advance.  Michael.\n",
+      "\tMy problem is this :\n",
+      "\tThe trimming area has to be split up into individual smaller\n",
+      "\tcells bounded by the trimming curve segments. If a cell\n",
+      "\tis wholly inside the area...then it is output as a whole ,\n",
+      "\telse it is trivially rejected. \n",
+      "\n",
+      "\tDoes any body know how thiss can be done, or is there any algo. \n",
+      "\tsomewhere for doing this.\n",
+      "\n",
+      "\tAny help would be appreciated.\n",
+      "\n",
+      "\tThanks, \n",
+      "\tAni.\n",
       "---------------\n",
       "Target:  1\n"
      ]
@@ -91,14 +99,14 @@
    ],
    "source": [
     "# Sample data\n",
-    "print(twenty_train.data[0])\n",
+    "print(twenty_train.data[1])\n",
     "print('---------------')\n",
     "print('Target: ', twenty_train.target[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +115,7 @@
        "(2257, 5000)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +210,7 @@
        "(2257, 5000)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,10 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -344,31 +350,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'God is love' => soc.religion.christian\n",
+      "'God loves GPU' => soc.religion.christian\n",
       "'OpenGL on the GPU is fast' => comp.graphics\n"
      ]
     }
    ],
    "source": [
     "# Score 2 new docs\n",
-    "docs_new = ['God is love', 'OpenGL on the GPU is fast']\n",
+    "docs_new = ['God loves GPU', 'OpenGL on the GPU is fast']\n",
     "\n",
-    "X_new_counts = tf_vectorizer.transform(docs_new)\n",
+    "def score_text(text_list):\n",
+    "    '''\n",
+    "    Score function\n",
+    "    '''\n",
+    "    X_new_counts = tf_vectorizer.transform(docs_new)\n",
+    "    X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
+    "    predicted = clf.predict(X_new_tfidf)\n",
+    "    return predicted\n",
     "\n",
-    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
     "\n",
-    "predicted = clf.predict(X_new_tfidf)\n",
-    "\n",
-    "for doc, category in zip(docs_new, predicted):\n",
+    "for doc, category in zip(docs_new, score_text(docs_new)):\n",
     "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
