--- a/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
+++ b/02_text_classification_sklearn/04_sklearn_text_classification_pipelines.ipynb
@@ -135,6 +135,26 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "text_clf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
+    "                     ('tfidf', TfidfTransformer()),\n",
+    "                     ('clf', ...),\n",
+    "                    ])\n",
+    "\n",
+    "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "predicted = text_clf.predict(twenty_test.data)\n",
+    "print('Test accuracy:', np.mean(predicted == twenty_test.target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "text_clf = Pipeline([('vect', CountVectorizer(max_df=0.95, min_df=2, max_features=5000, stop_words='english')),\n",
