minor error corrections

--- a/99_homework/template_homework.ipynb
+++ b/99_homework/template_homework.ipynb
@@ -11,23 +11,24 @@
     "- Classify each document in one of 20 categories.\n",
     "- The objective is obtain the better accuracy in the test set. You can use any library and model explained in the course.\n",
     "- The delivery are a unique jupiter notebook with all the code. Must run in the course Anaconda environment. Not use additional libraries.\n",
+    "- Send the notebook named homework\\_[name]\\_[surename].ipynb to sueiras@gmail.com before November 20th.\n",
     "\n",
     "## Template structure\n",
     "\n",
     "- A Jupiter notebook template is provided to do the task. Structure:\n",
     "  - Read the train and validation data.\n",
-    "  - Transform to generate numerical features\n",
+    "  - Transform to generate numerical features.: Build your transformations here\n",
     "  - Model: Build your model or models here. Check the accuracy over the validation set.\n",
     "  - Evaluate results: Build your scoring function here and apply it over the test set.\n",
-    "- You need to complete the transform and model steps to achieve the best result in the evaluation metric, accuracy in test set.\n",
-    "- Is completely forbidden load and use the test set except in the evaluate results step.\n",
+    "- You need to complete the transform and model steps to achieve the best result in the evaluation metric, the accuracy, in test set.\n",
+    "- Is completely forbidden load and use the test set except once in the final evaluate results step.\n",
     "\n",
     "## Evaluation\n",
     "\n",
     "- Exercise evaluated in 0-10 range points.\n",
-    "- To obtain 5 points you must deliver a notebook without errors that provide a solution whit a minimum accuracy of 63%.\n",
+    "- To obtain 5 points you must deliver a notebook without errors that provide a solution whit a minimum accuracy of 67%.\n",
     "- If you obtain an accuracy over 87% you have 10 points.\n",
-    "- Intermediated accuracies between 63% and 87% obtain intermediated points proportionally, but depending of the quality of the work is possible to reduce or increase a maximum of 2 the points assigned automatically by accuracy. \n",
+    "- Intermediated accuracies between 67% and 87% obtain intermediated points proportionally, but depending of the quality of the work is possible to reduce or increase a maximum of 2 the points assigned automatically by accuracy. \n",
     " "
    ]
   },
@@ -814,7 +815,7 @@
    "source": [
     "## 05 Evaluate test data\n",
     "- Don't edit after this!!!\n",
-    "- Execute only once whit the optimal model selected based on the validation accuracy metric over multiple experiments."
+    "- Execute only ONCE whit the optimal model selected based on the validation accuracy metric calculated over multiple experiments."
    ]
   },
   {
